Fix multi-line linear gradients on Safari - Close #69

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -103,6 +103,7 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
   }
 }
 
